WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314764
Select menu list text align padding is wrong
https://bugs.webkit.org/show_bug.cgi?id=314764
Summary
Select menu list text align padding is wrong
ccarley2
Reported
2026-05-13 15:40:45 PDT
The computed padding for select was based on the text alignment and resulted in the text overlapping with the cheveron
Attachments
Add attachment
proposed patch, testcase, etc.
ccarley2
Comment 1
2026-05-13 15:40:46 PDT
<
rdar://problem/176357057
>
ccarley2
Comment 2
2026-05-13 15:47:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64878
EWS
Comment 3
2026-05-15 11:16:32 PDT
Committed
313317@main
(537da1b74f0a): <
https://commits.webkit.org/313317@main
> Reviewed commits have been landed. Closing PR #64878 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug