REGRESSION(309054@main): Select menu list text align padding is wrong https://bugs.webkit.org/show_bug.cgi?id=314764 rdar://176357057

Reviewed by Alan Baradlay.

309054@main computed padding for select menulist buttons was based on
text-alignment, placing it on the start side when text pointed toward
the chevron (e.g. text-align:right in LTR). This resulted in the text
overlapping with the chevron.

The chevron is always drawn on the logical end regardless of text-align,
so the internal padding should always be placed on the logical end as well.

Test: fast/forms/select-menulist-text-align-chevron-padding.html

* LayoutTests/fast/forms/select-menulist-text-align-chevron-padding-expected.txt: Added.
* LayoutTests/fast/forms/select-menulist-text-align-chevron-padding.html: Added.
* LayoutTests/platform/ios/fast/forms/listbox-bidi-align-expected.txt:
* Source/WebCore/rendering/ios/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::platformPopupInternalPaddingBox const):

Canonical link: https://commits.webkit.org/313317@main